Refactor provider selection around active provider directory
- replace public provider snapshot APIs with an internal active provider directory
- extract ProviderSelectionSession and PatternProviderUploadService
- rename provider selection endpoints, actions, IDs, revisions, and resources
- fix Pattern Access action fallback to the base container
- remove the obsolete RecipeTypeUid API